# decklist

./: '  CREDITS  Cargo.toml  Pauper_Dimir_Control_by_cicciogire.txt  README.md  THIRD-PARTY-LICENSE  TODO.txt  ]  moxfield_haves_2025-01-20-1859Z.csv
src/: app.rs  collection.rs  config.rs  main.rs  startup.rs
src/database/: scryfall.rs
src/tui/: core.rs  help.rs  mod.rs
