[package]
name = "decklist"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.0"
arboard = "3.4.1"
chrono = "0.4.39"
crossterm = { version = "0.28.1" }
csv = "1.3.1"
diacritics = "0.2.2"
directories-next = "2.0.0"
futures = "0.3.31"
ratatui = "0.29.0"
ratatui-explorer = "0.1.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
toml = "0.8.19"
